--- a/patrimonios/templates/patrimonios/patrimonio_form.html
+++ b/patrimonios/templates/patrimonios/patrimonio_form.html
@@ -1,8 +1,17 @@
-<h1>
-    Novo Patrimonio
-</h1>
-    <form method="POST">
-        {% csrf_token %}
-        {{ form }}
-        <button type="submit">Save</button>
-    </form>
+{% extends 'base.html' %}
+{% load material_form %}
+
+{% block title %}Patrimônios{% endblock %}
+
+{% block main %}
+    <div class="col s12 m8 infos">
+        <form method="POST">
+            {% csrf_token %}
+            {% form form=form %}{% endform %}
+            <button type="submit" name="_submit" class="btn">Cadastrar</button>
+        </form>
+    </div>
+
+    {% include 'material/includes/material_css.html' %}
+    {% include 'material/includes/material_js.html' %}
+{% endblock main %}
